--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
                   </a>
                   </li>-->
                <li class="list-inline-item">
-                  <a href="http://steamcommunity.com/groups/_Z_e_R_o_H_o_o_k_" target="_blank">
+                  <a href="http://steamcommunity.com/profiles/76561198182924346/" target="_blank">
                   <i class="fa fa-steam" aria-hidden="true"></i>
                   </a>
                </li>
                <!--https://discord.gg/8cT5Y3E-->
                <li class="list-inline-item">
-                  <a href="https://discord.gg/Wkx747N" target="_blank">
+                  <a href="ts3server://89.38.150.244:2003" target="_blank">
                   <i class="fa fa-commenting" aria-hidden="true"></i>
                   </a>
                </li>
                <li class="list-inline-item">
-                  <a href="https://selly.gg/p/916f90ba" target="_self">
+                  <a href="https://www.youtube.com/user/MisterZerkwixx" target="_self">
                   <i class="fa fa-youtube-play"></i>
                   </a>
                </li>
